# Rose.Connect

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/: settings.local.json
.claude/agents/: rust-architect.md  rust-architecture-optimizer.md  rust-doc-updater.md
.claude/commands/: update-docs.md
docs/: agent-kanban-plan.md  component-theming-rules.md  gpui-guide.md  gpui-theming.md  macos-app-guide.md  performance-patterns.md  postcommander-future-features.md  postcommander-ui-specification.md  refactoring-patterns.md  zed-reference.md
src/: assets.rs  components_test.rs  icons.rs  icons_page.rs  layout.rs  main.rs  settings.rs  settings_window.rs
src/components/: data_table.rs  mod.rs  multi_column_select.rs  text_input.rs
src/components/data_table/: fk_card.rs  mod.rs  render.rs  resize.rs  types.rs
src/kanban/: board.rs  card.rs  column.rs  mod.rs
src/postcommander/: cell_edit.rs  connection_dialog.rs  database.rs  dialogs.rs  export.rs  mod.rs  page.rs  query_execution.rs  query_history_panel.rs  resize_handlers.rs  results.rs  save_query_dialog.rs  saved_queries_panel.rs  sidebar.rs  sql_completion.rs  sql_format.rs  state.rs  structure_panel.rs  tabs.rs  theme_colors.rs  types.rs  ui_helpers.rs
src/postcommander/sql/: completion.rs  mod.rs  safety.rs
src/theme/: builtin.rs  mod.rs  registry.rs
