[package]
name = "rose_connect"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = ["tree-sitter-languages"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
claude-agent-sdk = "0.1.1"
anyhow = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
unicode-segmentation = "1.12.0"
dirs = "6"
